--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -308,3 +308,23 @@ form .cancel-button {
 .form-container h1 {
   margin-bottom: 0.5rem;
 }
+
+/* Messages */
+.alert {
+  padding: .75rem 1.25rem; 
+  margin-bottom: 1rem; 
+  border: 1 solid transparent; 
+  border-radius: 0.25rem;
+}
+
+.alert-danger {
+  color: #721c24; 
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
+
+.alert-warning {
+  color: #856404;
+  background-color: #fff3cd;
+  border-color: #fff3cd;
+}
