--- a/views/products/createProductForm.ejs
+++ b/views/products/createProductForm.ejs
@@ -4,7 +4,7 @@
   <br>
   <form action="/products/create" method="POST">
     <label for="name">Name*</label>
-    <input type="text" id="name" name="name" required>
+    <input type="text" id="name" name="name">
     <div class="flex">
       <div class="flex-1">
         <label for="priority">Priority*</label>
