Create announcement model

--- a/views/products/createProductForm.ejs
+++ b/views/products/createProductForm.ejs
@@ -12,7 +12,7 @@
           <option value="Out of Stock" selected>Out of Stock</option>
           <option value="Low Stock">Low Stock</option>
           <option value="Medium Stock">Medium Stock</option>
-          <option value="Fully Stock">Fully Stock</option>
+          <option value="Fully Stocked">Fully Stocked</option>
         </select>
       </div>
       <div class="flex-1 m-left-10">
