--- a/views/warehouses/warehouseDetails.ejs
+++ b/views/warehouses/warehouseDetails.ejs
@@ -13,6 +13,27 @@
                 <h2><%= warehouse.location %></h2>
             </header>
             <%- include("../partials/messages", { errors: [] }) %>
+            <section>
+              <h3 class="category">Announcements</h3>
+              
+              <% if (announcements.length > 0) { %>
+                <% announcements.forEach(announcement => { %>
+                  <%- include("../announcements/announcementCard", { announcement }) %>
+                <% }) %>
+              <% } else { %>
+                <p class="none-message">No announcements.</p>
+              <% } %>
+              <button id="open-create-announcement-form" class="concealable-button">
+                <span class="add-icon">
+                  <svg width="13" height="13">
+                    <path d="M6 6V.5a.5.5 0 0 1 1 0V6h5.5a.5.5 0 1 1 0 1H7v5.5a.5.5 0 1 1-1 0V7H.5a.5.5 0 0 1 0-1H6z" fill="#C2650A"
+                      fill-rule="evenodd"></path>
+                  </svg>
+                </span>
+                <span>Announcement</span>
+              </button>
+              <%- include("../announcements/createAnnouncementForm", { warehouse: warehouse._id, user: currentUser._id }) %>
+            </section>
             <% if (inventory.length > 0) { %>
               <section>
                 <h3 class="category">Inventory</h3>
@@ -46,11 +67,12 @@
               </span>
               <span>Product</span>
             </button>
-            <%- include("../products/createProductForm", { warehouse: warehouse._id, type: "Inventory" }) %>
+            <%- include("../products/createProductForm", { warehouse: warehouse._id }) %>
           </section>
         </main>
       </section>
     </div>
     <script src="/javascripts/product.js"></script>
+    <script src="/javascripts/announcement.js"></script>
   </body>
 </html>
