Make new entries only possible for users logged in

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -41,6 +41,7 @@ textarea {
 .m-top-20 { margin-top: 2rem; }
 .m-top-5 { margin-top: 0.5rem; }
 .m-left-10 { margin-left: 1rem; }
+.m-bottom-30 { margin-bottom: 3rem; }
 
 .green { color: green; }
 .yellow { color: yellowgreen }
