--- a/views/partials/aside.ejs
+++ b/views/partials/aside.ejs
@@ -1,6 +1,6 @@
 <aside>
   <p><a href="/dashboard">Dashboard</a></p>
-  <p><a href="/dashboard">Warehouses (IP)</a></p>
+  <!-- <p><a href="/dashboard">Warehouses (IP)</a></p>
   <p><a href="/dashboard">My Warehouse (IP)</a></p>
-  <p><a href="/dashboard">Profile (IP)</a></p>
+  <p><a href="/dashboard">Profile (IP)</a></p> -->
 </aside>
